--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -19,14 +19,14 @@
 }
 
 body{
-    background-color:#008080;
+    background-color:#f8ac7a;
  
 }
 /* === Open Nav Section === */
 
 
 #nav{
-    background-color:rgba(0,0,0,0.5);
+    background-color:none;
     position:fixed;
     width:100%;
     top:0;
@@ -325,7 +325,7 @@ body{
 }
 .products .cards .card .content{
     text-align:center;
-    background-color:#8A2BE2;
+    background-color:#d2691e;
 }
 
 .products .cards .card .content .rating i{
@@ -516,7 +516,7 @@ body{
 }
 
 #why .cards .card .content{  
-    background-color:red;
+    background-color:#ff6c04;
     position:absolute;
     top:100%;
     left:0%;
@@ -525,7 +525,6 @@ body{
     transition:all 0.5s;
     visibility:hidden;
     border-radius:0 10rem 0 5rem;
-
 }
 
 #why .cards .card:hover .content{
@@ -579,7 +578,7 @@ body{
 #join{
     color:#fff;
     padding:30px 0;
-    background-color:#9932CC;
+    background-color:#d2691e;
 }
 
 #join > .container{
@@ -655,7 +654,7 @@ body{
 
 #blog{
    padding:30px 0;
-   background-color:#4682B4;
+   background-color:#fff;
 }
 
 #blog > .container{
@@ -664,7 +663,7 @@ body{
 }
 
 #blog .title{
-    color:#fff;
+    color:#000;
     font-size:50px;
 }
 
