--- a/assets/css/media_query.css
+++ b/assets/css/media_query.css
@@ -268,6 +268,18 @@
         top:50%;
     }
 
+    /* shop */
+    #shop{
+        background-position:50% 50%;
+    }
+
+    /* new letter */
+
+    #news-letter{
+        background-position:50% 50%;
+
+    }
+
 
 
 
