--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -619,7 +619,7 @@ body{
 #join .content .btn{
     margin:40% 0;
     padding:10px 40px;
-    background-color:#d2691e;
+    background-color:yellow;
     color:#fff;
     border-radius:3px;
     border:none;
